tests/fixtures/valid/app/valid-get.php
<?php

use Illuminate\Support\Facades\Config;

echo Config::get('app.valid_key');
