tests/fixtures/invalid/app/invalid-get.php
<?php

use Illuminate\Support\Facades\Config;

echo Config::get('app.invalid_key');
